fix for layout bug
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@5006 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/DataImport/skins/TermImport/termimport.css
+++ b/extensions/DataImport/skins/TermImport/termimport.css
@@ -140,7 +140,7 @@ a:hover {text-decoration:underline; cursor: pointer; cursor: hand;}
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	float: left;
-	width: 100%;
+	width: 98%;
 	display: none;
 	margin-top: 10px;
 }
