--- a/extensions/DataImport/skins/webservices/webservices.css
+++ b/extensions/DataImport/skins/webservices/webservices.css
@@ -8,7 +8,7 @@
 	white-space: nowrap; 
 	display: table; 
 	background-color: #8d8d8d; 
-	width: 100%; 
+	width: 98%; 
 	border-width: 1px; 
 	border-style: solid; 
 	border-color: #5d5d5d
